[tool.poetry]
name = "hw-python-web-eight"
version = "0.1.0"
description = ""
authors = ["Denys Filichkin <denys.philichkin@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_python_web_eight"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
redis = "^4.6.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
